--- a/index.html
+++ b/index.html
@@ -192,10 +192,7 @@ Oct.2014
                                 </a>
                             </div>
                             <div style="height:4cm; overflow:auto">
-							                <p><font size="4">I learnt quite a few styles of
-							                    Martial arts, including Kung-Fu, Jeet Kune Do,
-							                    Sanshou (free combat), Chin Na (grappling),
-							                    Chinese wrestling, Muay Thai, MMA.</font></p>
+							                <p><font size="4">I'm into all kinds of Martial arts, including Kung-Fu, Jeet Kune Do, Sanshou (free combat), Chin Na (grappling), Chinese wrestling, Muay Thai, MMA.</font></p>
                             </div>
            
                             <div class="text-center">
@@ -644,16 +641,14 @@ Oct.2014
                     </div>
 
                         <p style="margin-left: 18vw; margin-bottom:
-                        6px"> <font size="4">I'm a big fan of martial arts since
-                        I was a little kid, and I was really
+                        6px"> <font size="4">I'm a big fan of martial
+                        arts since I was a kid, and I was really
                         into <a href="http://en.wikipedia.org/wiki/Wuxia">Wuxia</a>
-                        novels and Kung Fu movies (mainly acted by Bruce Lee,
-                        Jet Li, and Jacky Chen). They are (good) influences that
-                        cannot be ignored in my childhood. I finally got a
-                        chance to learn Kung Fu in the year 1999 with my first
-                        master. Since then, I read a lot of materials about
-                        martial arts, and practice them in real fights. I
-                        started to learn
+                        novels and Kung Fu movies (mainly acted by
+                        Bruce Lee, Jet Li, Jacky Chen, Jing Wu, and
+                        Donnie Yen). I finally start to learn Kung Fu
+                        in 1999 with my first Sifu. Later, I started
+                        to learn
                         <a href="http://en.wikipedia.org/wiki/Jeet_Kune_Do">Jeet
                         Kune Do</a> around
                         2002, <a href="http://en.wikipedia.org/wiki/T'ai_chi_ch'uan">
@@ -670,12 +665,16 @@ Oct.2014
                         quan</a>, <a href="http://en.wikipedia.org/wiki/Chin_Na">Chin
                         Na</a> (joint lock techniques)
                         and <a href="http://en.wikipedia.org/wiki/Mongolian_wrestling">Mongolian
-                        wrestling</a> in 2009. I became a Kung Fu coach and an
-                        assistant Sanshou coach in 2008, and I got a part time
-                        job for teaching stand up technique in
+                        wrestling</a> in 2009. I became a Kung Fu
+                        coach and an assistant Sanshou coach in 2008,
+                        and I got a part time job for teaching stand
+                        up technique in
                         a <a href="http://en.wikipedia.org/wiki/Mixed_martial_arts">Mixed
-                        martial arts</a> (MMA) school in Australia in 2010, and
-                        founded Endless Martial Arts Association in 2011.</font>
+                        martial arts</a> (MMA) school in Australia in
+                        2010, and founded Endless Martial Arts
+                        Association in 2011. I've been invited several
+                        times to give performance in different
+                        places.</font>
                         </p>
                 </div>
             </div>
@@ -716,9 +715,9 @@ Oct.2014
                               <p style="margin-left: 18vw;
                                         margin-bottom:
                                         6px"> <font size="4">I'm a
-                                        direct of CloudTomo, a company
-                                        providing security solutions
-                                        for email and cloud
+                                        director of CloudTomo, a
+                                        company providing security
+                                        solutions for email and cloud
                                         storage. Please contact me for
                                         more details. </p>
                               <br>
