--- a/index.html
+++ b/index.html
@@ -325,10 +325,11 @@ Oct.2014
                           and Networks"</a>. <i>IEEE TrustCom-2012</i>
                           (acceptance rate: 100/358 = 28%),
                           pp. 271-278. DOI:10.1109/TrustCom.2012.228</li>
-                          <li>Jiangshan Yu and Mark Ryan, <a href="doc/paper/SPW-2015.pdf"> "Device
-                          attacker models: fact and
-                          fiction"</a>, <i>Security Protocols XXIII</i>,
-                          accepted, 2015.
+                          <li>Jiangshan Yu and Mark
+                          Ryan, <a href="doc/paper/SPW-2015.pdf">
+                          "Device attacker models: fact and
+                          fiction"</a>, <i>Security Protocols
+                          XXIII</i>, pp. 158-167, 2015.
                         </ul>
                       </li>
 
