--- a/index.html
+++ b/index.html
@@ -442,7 +442,9 @@ Oct.2014
                              </p>
                              <p>
                                <a href="https://ifipsec.org/2015/"> IFIP SEC 2015</a>;
-                               <a href="http://www.ieee-security.org/TC/EuroSP2016/"> IEEE Euro S&P 2016</a>.
+                               <a href="http://www.ieee-security.org/TC/EuroSP2016/"> IEEE Euro S&P 2016</a>;
+                               <a href="https://ifipsec.org/2016/">IFIP SEC 2016</a>;
+                               <a href="https://distrinet.cs.kuleuven.be/events/essos/2016/">ESSoS 2016</a>.
                              </p>
                            </i>                          
 	                        <br>
