--- a/index.html
+++ b/index.html
@@ -397,7 +397,14 @@ Oct.2014
 	                  <ul type="disc"; style="margin-left: 18vw; margin-bottom:
                               6px">
                             <li><b>Comference Committee</b></li><br>
-                            <p> Chair, <a href="https://blockchainbirmingham.wordpress.com/">Workshop on BlockChain</a>, Birmingham, United Kingdom, September 18, 2015.</p>
+                            <ul type="circle">
+                              <li>
+                                  Chair, <a href="https://blockchainbirmingham.wordpress.com/">
+                                  Workshop on BlockChain
+                                </a>, Birmingham, United Kingdom, September 18, 2015.</li>
+	                      <li>PC member, <a href="http://mkp.com">Software Architecture for Big Data and the Cloud</a></li>
+                              </ul>
+
 	                    <li><b>Invited Reviewer (Journal):</b><br>
 	                      <ul type="circle">
 	                        <li><i><a href="http://comjnl.oxfordjournals.org">The Computer Journal</a></i></li>
