--- a/index.html
+++ b/index.html
@@ -396,14 +396,16 @@ Oct.2014
                     </b></font></p>
 	                  <ul type="disc"; style="margin-left: 18vw; margin-bottom:
                               6px">
-                            <li><b>Comference Committee</b></li><br>
+                            <li><b>Comference Committee</b></li>
                             <ul type="circle">
                               <li>
                                   Chair, <a href="https://blockchainbirmingham.wordpress.com/">
                                   Workshop on BlockChain
                                 </a>, Birmingham, United Kingdom, September 18, 2015.</li>
 	                      <li>PC member, <a href="http://mkp.com">Software Architecture for Big Data and the Cloud</a></li>
-                              </ul>
+                            </ul>
+                            
+                            <br>
 
 	                    <li><b>Invited Reviewer (Journal):</b><br>
 	                      <ul type="circle">
