--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@ Oct.2014
                         Science</a>, <a href="http://www.birmingham.ac.uk/">University
                         of Birmingham</a>, U.K.  <!-- I'm also a director -->
                         <!-- of CloudTomo, a startup aiming to help users -->
-                        <!-- to secure their email and cloud storage. --> I
-                        received my MSc and MPhil degree in computer
-                        science (information security, under the
-                        supervision
+                        <!-- to secure their email and cloud
+                        storage. --> I received my MSc and MPhil
+                        degree in computer science (information
+                        security, under the supervision
                         of <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
                         Wang</a>
                         and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
@@ -123,9 +123,9 @@ Oct.2014
                         interests are in security and privacy. In
                         particular, the focus of my research has been
                         on secure authentication, PKI, key management,
-                        certificate security, and email security. Im'
-                        also very interested in crypto, cloud security
-                        and e-voting security.
+                        certificate security, email security, and IoT
+                        security. Im' also very interested in crypto,
+                        cloud security and e-voting security.
                           </font>
                         </p>
                 </div>
@@ -402,7 +402,7 @@ Oct.2014
                                   Chair, <a href="https://blockchainbirmingham.wordpress.com/">
                                   Workshop on BlockChain
                                 </a>, Birmingham, United Kingdom, September 18, 2015.</li>
-	                      <li>PC member, <a href="http://mkp.com">Software Architecture for Big Data and the Cloud</a></li>
+	                      <li>PC member, <a href="http://mkp.com">Software Architecture for Big Data and the Cloud, 2016.</a></li>
                             </ul>
                             
                             <br>
@@ -492,7 +492,7 @@ Oct.2014
                           fact and fiction'. Presented at SPW 2015,
                              Cambridge university, Cambridge, UK.</li>
 
-                          <li>Jiangshan Yu. 'security in periodically
+                          <li>Jiangshan Yu. 'Security in periodically
                           compromised cloud storage'. Presented at
                           CryptoForma, University of Strathclyde,
                           Glasgow, UK.</li>
@@ -658,9 +658,9 @@ Oct.2014
                         into <a href="http://en.wikipedia.org/wiki/Wuxia">Wuxia</a>
                         novels and Kung Fu movies (mainly acted by
                         Bruce Lee, Jet Li, Jacky Chen, Jing Wu, and
-                        Donnie Yen). I finally start to learn Kung Fu
-                        in 1999 with my first Sifu. Later, I started
-                        to learn
+                        Donnie Yen). I finally started to learn Kung
+                        Fu in 1999 with my first Sifu. Later, I
+                        started to learn
                         <a href="http://en.wikipedia.org/wiki/Jeet_Kune_Do">Jeet
                         Kune Do</a> around
                         2002, <a href="http://en.wikipedia.org/wiki/T'ai_chi_ch'uan">
