--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@ Oct.2014
                                 <li><a href="#templatemo-contact">CONTACT</a></li>
 <!--                                <li><a href="#templatemo-follow">FOLLOW</a></li>
 -->
-                                <li><a rel="nofollow" href="web/resume.html" class="external-link">CV</a></li>
-                                <li><a rel="nofollow" href="web/index_cn.html" class="external-link">中文</a></li>
+<!-- <li><a rel="nofollow" href="web/resume.html" class="external-link">CV</a></li> -->
+<li><a rel="nofollow" href="./doc/J.YU.pdf" class="external-link">CV</a></li>
+                                <!-- <li><a rel="nofollow" href="web/index_cn.html" class="external-link">中文</a></li> -->
                             </ul>
                         </div><!--/.nav-collapse -->
                     </div><!--/.container-fluid -->
@@ -84,53 +85,64 @@ Oct.2014
                         <br>                        
                         <div class="templatemo-service">
                           <div class="container">
-                            <div class="row">
-                              <div class="col-md-2">
-                                <div class="templatemo-service-item">
-                                  <div>
-                                    <img style="width: 28vw; height: 19vw;"
-                                         src="images/DSC_4316.JPG"
-                                         alt="icon">
+                            <div class="col-md-2">
+                              <div class="templatemo-service-item">
+                                <div>
+                                  <img style="width: 28vw; height: 19vw;"
+                                       src="images/DSC_4316.JPG"
+                                       alt="icon">
+                                </div>
+                                <br class="clearfix"/>
+                              </div>
+                              <div class="clearfix"></div>
                             </div>
-                            <br class="clearfix"/>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                        <p style="margin-left: 31vw; margin-bottom:
-                        6px"> <font size="4">I'm
-                        an <a href="http://www.epsrc.ac.uk/Pages/default.aspx">EPSRC</a>
-                        project funded Ph.D student working
-                        with <a href="http://www.cs.bham.ac.uk/~mdr/">Prof. Mark
-                        Ryan</a> on the project
-                        "<a href="http://gow.epsrc.ac.uk/NGBOViewGrant.aspx?GrantRef=EP/H005501/1">
-                        Analysing Security and Privacy Properties</a>"
-                        in
-                        the <a href="http://www.cs.bham.ac.uk">School
-                        of Computer
-                        Science</a>, <a href="http://www.birmingham.ac.uk/">University
-                        of Birmingham</a>, U.K.  <!-- I'm also a director -->
-                        <!-- of CloudTomo, a startup aiming to help users -->
-                        <!-- to secure their email and cloud storage. --> I
-                        received my MSc and MPhil degree in computer
-                        science (information security, under the
-                        supervision
-                        of <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
-                        Wang</a>
-                        and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
-                        Mu</a>) respectively in 2011 and 2012, from
-                        the <a href="http://www.uow.edu.au/">University
-                        of Wollongong</a>, Australia. My research
-                        interests are in security and privacy. In
-                        particular, the focus of my research has been
-                        on secure authentication, PKI, key management,
-                        certificate security, and email security. Im'
-                        also very interested in crypto, cloud security
-                        and e-voting security.
-                          </font>
-                        </p>
-                </div>
-            </div>
-        </div>
+                            <p style="margin-left: 31vw; margin-bottom:
+                                      6px"> <font size="4">I'm
+                                an <a href="http://www.epsrc.ac.uk/Pages/default.aspx">EPSRC</a>
+                                project funded Ph.D student working
+                                with <a href="http://www.cs.bham.ac.uk/~mdr/">Prof. Mark
+                                  Ryan</a> <!-- on the project -->
+                                <!-- "<a href="http://gow.epsrc.ac.uk/NGBOViewGrant.aspx?GrantRef=EP/H005501/1"> -->
+                                <!-- Analysing Security and Privacy Properties</a>" -->
+                                in
+                                the <a href="http://www.cs.bham.ac.uk">School
+                                  of Computer
+                                  Science</a>, <a href="http://www.birmingham.ac.uk/">University
+                                  of Birmingham</a>, UK.  <!-- I'm also a director -->
+                                <!-- of CloudTomo, a startup aiming to help users -->
+                                <!-- to secure their email and cloud
+                                     storage. --> I received my MSc and MPhil
+                                degree in computer science (information
+                                security, under the supervision
+                                of <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
+                                  Wang</a>
+                                and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
+                                  Mu</a>) respectively in 2011 and 2012, from
+                                the <a href="http://www.uow.edu.au/">University
+                                  of Wollongong</a>, Australia.
+                                <br><br>
+
+                                My research interests are in cyber security
+                                and user privacy. In particular, the focus of
+                                my research has been on applied crypto, secure
+                                authentication, key management, public key
+                                certificate security, email security, secure
+                                cloud storage, and security proof (both
+                                game-based security proof and formal
+                                machine-checked proof).
+                                <br><br>
+                                Currently, I’m working
+                                on the Internet of Things security including
+                                device authentication, secure communication
+                                and data processing, secure IoT payment
+                                system, user privacy in the supply chain
+                                system, and mitigating damage caused by
+                                attacks (e.g. device impersonation attack and
+                                device break-ins).
+                                <br><br>
+                              </font>
+                            </p>
+                          </div>
                     <br class="clearfix"/>
                 </div>
                 <br class="clearfix"/>
@@ -396,7 +408,7 @@ Oct.2014
                     </b></font></p>
 	                  <ul type="disc"; style="margin-left: 18vw; margin-bottom:
                               6px">
-                            <li><b>Comference Committee</b></li><br>
+                            <li><b>Comference Committee</b></li>
                             <p> Chair, <a href="https://blockchainbirmingham.wordpress.com/">Workshop on BlockChain</a>, Birmingham, United Kingdom, September 18, 2015.</p>
 	                    <li><b>Invited Reviewer (Journal):</b><br>
 	                      <ul type="circle">
@@ -480,7 +492,7 @@ Oct.2014
                            <li>Jiangshan Yu. 'Device attacker models:
                           fact and fiction'. Presented at SPW 2015,
                              Cambridge university, Cambridge, UK.</li>
-
+                           <br>
                           <li>Jiangshan Yu. 'security in periodically
                           compromised cloud storage'. Presented at
                           CryptoForma, University of Strathclyde,
@@ -504,7 +516,18 @@ Oct.2014
                     <p style="margin-left: 18vw; margin-bottom:
                               6px"><font size="5"><b>Honors and Awards: </b></font></p>
 	                  <ul type="disc"; style="margin-left: 18vw; margin-bottom:
-                              6px">
+                                                  6px">
+                            <li><b>Funding:</b><br>
+	                      <ul type="circle">
+	                        <li>
+                                  "Technology inspired feasibility
+                                  study for secure email and cloud
+                                  storage", GBP33,000
+                                  from Technology Strategy Board
+                                  (Innovate UK), 2015.
+                                </li>
+                              </ul>
+                              </li>
 	                    <li><b>Scholarships:</b><br>
 	                      <ul type="circle">
 	                        <li> Universitas 21 scholarship from
