--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ Oct.2014
                             <div class="col-md-2">
                               <div class="templatemo-service-item">
                                 <div>
-                                  <img style="width: 28vw; height: 19vw;"
-                                       src="images/DSC_4316.JPG"
+                                  <img style="width: 20vw; height: 24vw;"
+                                       src="images/profile.png"
                                        alt="icon">
                                 </div>
                                 <br class="clearfix"/>
