--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@ Oct.2014
                                         company providing security
                                         solutions for email and cloud
                                         storage. Please contact me for
-                                        more details. </p>
+                                        more detail. </p>
                               <br>
                     <p style="margin-left: 18vw; margin-bottom:
                         6px"> <font size="5"><b>Tech-Project</b></font></p>
