--- a/index.html
+++ b/index.html
@@ -111,15 +111,17 @@ Oct.2014
                                   of Birmingham</a>, UK.  <!-- I'm also a director -->
                                 <!-- of CloudTomo, a startup aiming to help users -->
                                 <!-- to secure their email and cloud
-                                     storage. --> I received my MSc and MPhil
-                                degree in computer science (information
-                                security, under the supervision
-                                of <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
-                                  Wang</a>
-                                and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
-                                  Mu</a>) respectively in 2011 and 2012, from
-                                the <a href="http://www.uow.edu.au/">University
-                                  of Wollongong</a>, Australia.
+                                     storage. --> I received my MSc
+                                     and MPhil degree in computer
+                                     science (crypto and information
+                                     security, under the supervision
+                                     of <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
+                                     Wang</a>
+                                     and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
+                                     Mu</a>) respectively in 2011 and
+                                     2012, from
+                                     the <a href="http://www.uow.edu.au/">University
+                                     of Wollongong</a>, Australia.
                                 <br><br>
 
                                 My research interests are in cyber security
