--- a/index.html
+++ b/index.html
@@ -327,8 +327,21 @@ Oct.2014
                             (impact factor = 2.065, h5-index = 47), Vol.9, No.12
                             , pp. 2302-2313, Dec. 2014. DOI: 10.1109/TIFS.2014.2362979
                           </li>
+                          <li>
+                            Jiangshan Yu, Vincent Cheval, and Mark
+                            Ryan. <a href="doc/paper/DTKI.pdf">"DTKI:
+                            a new formalized PKI with verifiable
+                            trusted parties"</a>. <i> The computer
+                            Journal </i>,
+                            2016. (<a href="doc/paper/DTKI-report.pdf">Technical
+                            Report</a>
+                            and <a href="doc/paper/DTKI-proof.zip">
+                            Tamarin code</a>)
+                        </li>
+
+
                         </ul>
-                        
+
                         <br>
 
 	                    <li><b>Conference:</b><br>
@@ -365,17 +378,6 @@ Oct.2014
 
                       <li><b>Unpublished work:</b><br> 
 	                      <ul type="circle">
-                          <li>
-                        Jiangshan Yu, Vincent Cheval, and Mark
-                        Ryan. <a href="doc/paper/DTKI.pdf">"DTKI: a
-                        new formalized PKI with no trusted
-                        parties"</a>. <i>CoRR abs/1408.1023</i>,
-                        2014. (<a href="doc/paper/DTKI-report.pdf">Technical
-                        Report</a>
-                        and <a href="doc/paper/DTKI-proof.zip">
-                        Tamarin code</a>)
-                        </li>
-
                           <li>
                         Jiangshan Yu, Mark Ryan, and Cas
                         Cremers. <a href="doc/paper/KUD.pdf">"How to
