--- a/index.html
+++ b/index.html
@@ -398,6 +398,12 @@ Oct.2014
                            Sign-on Schemes in Distributed Systems and
                            Networks", 2015.
                          </li>
+                          <li>
+                            Jiangshan Yu, Mark Ryan and Liqun Chen. "A
+                            self-healing scheme for distributed
+                            storage (Or, how to store a long-term
+                            secret online)", 2016.
+                        </li>
 
                           </ul>
                       </li>
