--- a/index.html
+++ b/index.html
@@ -485,16 +485,16 @@ Oct.2014
                       <li><b>Talk:</b><br>
 
                         <ul type="circle">
-                          <li>Jiangshan
-                          Yu. <a href="doc/Slides/Slide-3F.pdf"> 'A Generic
-                          Framework for Three-Factor
-                          Authentication'</a>. [CompSecSem] Security Seminar,
-                          School of Computer Science, University of Birmingham,
-                          March, 2013, Birmingham.</li>
+                          <li>Jiangshan Yu. 'A Generic Framework for
+                          Three-Factor
+                          Authentication'. [CompSecSem] Security
+                          Seminar, School of Computer Science,
+                          University of Birmingham, March, 2013,
+                          Birmingham.</li>
                           <br>
-                          <li>Jiangshan Yu. <a href="doc/Slides/DTKI.pdf">
-                              'DTKI: A protocol for public key
-                              validation'</a>. Presented at:
+                          <li>Jiangshan Yu.  'DTKI: a new formalized
+                            PKI with verifiable trusted
+                            parties'. Presented at:
                             <a href="https://sites.google.com/site/certificatetransparency/hackday">
                               Google Certificate Transparency Hack Day</a>
                             (Google, London,
