--- a/index.html
+++ b/index.html
@@ -380,10 +380,11 @@ Oct.2014
 	                      <ul type="circle">
                           <li>
                         Jiangshan Yu, Mark Ryan, and Cas
-                        Cremers. <a href="doc/paper/KUD.pdf">"How to
-                        detect unauthorised usage of a key"</a>. <i>
-                        IACR Cryptology ePrint Archive 2015: 486</i>,
-                        2015. (<a href="doc/paper/KUD-proof.zip">Tamarin
+                        Cremers. <a href="doc/paper/DECIM.pdf">"DECIM:
+                        Detecting Endpoint Compromise In
+                        Messaging"</a>. <i> IACR Cryptology ePrint
+                        Archive 2015: 486</i>,
+                        2015. (<a href="doc/paper/DECIM-proof.zip">Tamarin
                         code</a>)
                         </li>
 
