removed the compj paper

--- a/index.html
+++ b/index.html
@@ -329,13 +329,13 @@ Oct.2014
                           </li>
                           <li>
                             Jiangshan Yu, Vincent Cheval, and Mark
-                            Ryan. <a href="doc/paper/DTKI.pdf">"DTKI:
+                            Ryan. <!-- <a href="doc/paper/DTKI.pdf"> -->"DTKI:
                             a new formalized PKI with verifiable
-                            trusted parties"</a>. <i> The computer
+                            trusted parties"<!-- </a> -->. <i> The computer
                             Journal </i>,
-                            2016. (<a href="doc/paper/DTKI-report.pdf">Technical
-                            Report</a>
-                            and <a href="doc/paper/DTKI-proof.zip">
+                            2016. (<!-- <a href="doc/paper/DTKI-report.pdf">Technical -->
+                            <!-- Report</a> -->
+                            <!-- and  --><a href="doc/paper/DTKI-proof.zip">
                             Tamarin code</a>)
                         </li>
 
