--- a/index.html
+++ b/index.html
@@ -442,6 +442,9 @@ Oct.2014
                                       Security and Communication
                                       Networks
                                 </a></i></li>
+                                <li><i><a href="http://link.springer.com/journal/10207">
+                                      International Journal of Information Security
+                                </a></i></li>
 
 	                      </ul>
 	                    </li>
@@ -476,7 +479,11 @@ Oct.2014
                                <a href="https://ifipsec.org/2015/"> IFIP SEC 2015</a>;
                                <a href="http://www.ieee-security.org/TC/EuroSP2016/"> IEEE Euro S&P 2016</a>;
                                <a href="https://ifipsec.org/2016/">IFIP SEC 2016</a>;
-                               <a href="https://distrinet.cs.kuleuven.be/events/essos/2016/">ESSoS 2016</a>.
+                               <a href="https://distrinet.cs.kuleuven.be/events/essos/2016/">ESSoS 2016</a>;
+                             </p>
+                             <p>
+                               <a href="http://www.ics.forth.gr/esorics2016/">ESORICS 2016</a>;
+                               <a href="http://www.wistp.org/">WISTP 2016</a>.
                              </p>
                            </i>                          
 	                        <br>
