--- a/index.html
+++ b/index.html
@@ -432,9 +432,6 @@ Oct.2014
 
 	                    <li><b>Invited Reviewer (Journal):</b><br>
 	                      <ul type="circle">
-	                        <li><i><a href="http://comjnl.oxfordjournals.org">The Computer Journal</a></i></li>
-	                        <li><i><a href="http://ees.elsevier.com/jisa/">Journal
-	                        of Information Security and Applications</a></i></li>
 	                        <li><i><a href="http://www.signalprocessingsociety.org/publications/periodicals/forensics/">IEEE
 	                        Transactions on Information Forensics &
 	                        Security</a></i></li>
@@ -442,10 +439,14 @@ Oct.2014
                                       Security and Communication
                                       Networks
                                 </a></i></li>
+				<li><i><a href="http://comjnl.oxfordjournals.org">The Computer Journal</a></i></li>
                                 <li><i><a href="http://link.springer.com/journal/10207">
-                                      International Journal of Information Security
+                                      International Journal of
+                                      Information Security
                                 </a></i></li>
-
+	                        <li><i><a href="http://ees.elsevier.com/jisa/">Journal
+	                        of Information Security and
+	                        Applications</a></i></li>
 	                      </ul>
 	                    </li>
 
