--- a/index.html
+++ b/index.html
@@ -360,6 +360,16 @@ Oct.2014
                         </ul>
                       </li>
 
+                            <br>
+                            <li><b>Patent:</b><br>
+	                      <ul type="circle">
+                                <li>
+                                  Jiangshan Yu and Mark Ryan. 'Key
+                                  usage detection'.<br>UK Patent
+                                  Application GB 1416188.9 <br> US Patent
+                                  Application US 14/852,342
+                                </li>
+                              </ul>
                       <br>
 
 	                    <li><b>Master Thesis:</b><br>
@@ -495,38 +505,47 @@ Oct.2014
 
                         <ul type="circle">
                           <li>Jiangshan Yu. 'A Generic Framework for
-                          Three-Factor
-                          Authentication'. [CompSecSem] Security
-                          Seminar, School of Computer Science,
-                          University of Birmingham, March, 2013,
-                          Birmingham.</li>
-                          <br>
+                          Three-Factor Authentication'. University of
+                          Birmingham, UK, 2013.</li>
+
                           <li>Jiangshan Yu.  'DTKI: a new formalized
-                            PKI with verifiable trusted
-                            parties'. Presented at:
-                            <a href="https://sites.google.com/site/certificatetransparency/hackday">
-                              Google Certificate Transparency Hack Day</a>
+                            PKI with verifiable trusted parties'. <br>
+                            Presented at:
+                            <ul>
+                            <li> <a href="https://sites.google.com/site/certificatetransparency/hackday">
+                                Google Certificate Transparency Hack Day</a>
                             (Google, London,
-                            UK); <a href="http://www.sti.uniurb.it/events/fosad13/">
-                            FOSAD-2013</a> (Bertinoro,
-                            Italy); <a href="http://www.cryptoforma.org.uk/event/3rd-international-cryptoforma-workshop-at-esorics/">
-                            CryptoForma Workshop at ESORICS-2013 </a> (Royal
-                            Holloway, University of London,
-                            UK), <a href="http://www.hpl.hp.com/people/philipp_reinecke/cttd-index.html">
-                            Cloud Technologies and Trust Domains </a> (CTTD
-                            2013, HP Labs Bristol,
-                            UK); <a href="http://imm.dtu.dk/~samo/hotspot14.html">
-                            HotSpot Workshop at ETAPS2014 </a> (Grenoble,
-                            France).</li>
-                          <br>
+                              UK, 2013); </li>
+                            <li>
+                            <a href="http://www.sti.uniurb.it/events/fosad13/">
+                            FOSAD</a> (Bertinoro,
+                            Italy, 2013); </li>
+                            <li> University of Birmingham, UK, 2013.</li>
+                            <li> <a href="http://www.cryptoforma.org.uk/event/3rd-international-cryptoforma-workshop-at-esorics/">
+                            CryptoForma Workshop at ESORICS</a>
+                            (Royal Holloway, University of London,
+                              UK, 2013), </li>
+
+                            <li><a href="http://www.hpl.hp.com/people/philipp_reinecke/cttd-index.html">
+                            Cloud Technologies and Trust Domains </a>
+                            (CTTD, HP Labs Bristol,
+                                UK, 2013); </li><li><a href="http://imm.dtu.dk/~samo/hotspot14.html">
+                            HotSpot Workshop at ETAPS </a>
+                                (Grenoble, France, 2014).</li>
+                            <li> ETH Zurich, Switzerland, 2016</li>
+                            </ul>
+                          </li>
+                          <li>Jiangshan Yu, 'Key usage detection',
+                            University of Birmingham, UK, 2014.</li>
                            <li>Jiangshan Yu. 'Device attacker models:
-                          fact and fiction'. Presented at SPW 2015,
-                             Cambridge university, Cambridge, UK.</li>
-<br>
+                          fact and fiction'. Presented at the
+                          Twenty-third International Workshop on
+                          Security Protocols, Cambridge University,
+                          Cambridge, UK, 2015.</li>
                           <li>Jiangshan Yu. 'Security in periodically
                           compromised cloud storage'. Presented at
                           CryptoForma, University of Strathclyde,
-                          Glasgow, UK.</li>
+                          Glasgow, UK, 2015.</li>
 
                           <br>
                           <!-- <li>Jiangshan Yu. <a href="doc/Slides/KUD_Slides.pdf"> -->
@@ -727,8 +746,9 @@ Oct.2014
                         martial arts</a> (MMA) school in Australia in
                         2010, and founded Endless Martial Arts
                         Association in 2011. I've been invited several
-                        times to give performance in different
-                        places.</font>
+                        times to give performance in different places
+                        (e.g. Viva La Gong at Wollongong, AU; Town
+                        Hall at Birmingham, UK; etc).</font>
                         </p>
                 </div>
             </div>
