change email address and pgp key

--- a/index.html
+++ b/index.html
@@ -1199,34 +1199,33 @@ Oct.2014
 
                         <p><img style="width: 27px; height: 27px;"
                         src="images/email.png" alt="icon
-                        2"><a href="images/email/email1.png"><img style="width: 130px;
-                        height: 30px" src=images/email/email1.png></a>(University
-                        account) 
+                        2"><a href="images/email/email1.png"><img style="width:
+                        130px; height: 30px"
+                        src=images/email/email1.png></a>(Work account)
                         <br>
-                        <span style="padding-left:165px"><a href="doc/jxy223.asc">
-                        PGP Key</a> and <a href="doc/jxy223.txt">
-                        SMIME </a></span> 
+                        <span style="padding-left:165px"><a href="doc/5A096C34.asc">
+                        PGP Key</a></span> 
                         <br>
                         <span style="padding-left:30px"> <a href="images/email/email2.png"><img style="width:
                         130px; height: 30px"
                         src=images/email/email2.png></a>(Personal account)</span>
                         <br>
-                        <span style="padding-left:165px"><a href="doc/email2.asc">
+                        <span style="padding-left:165px"><a href="doc/5A096C34.asc">
                         PGP Key</a></span>
                         <br>
-                        <span style="padding-left:30px"> <a href="images/email/email3.png"><img style="width:
-                        130px; height: 30px"
-                        src=images/email/email3.png></a>(P2P mail)</span>                      
+                        <!-- <span style="padding-left:30px"> <a href="images/email/email3.png"><img style="width: -->
+                        <!-- 130px; height: 30px" -->
+                        <!-- src=images/email/email3.png></a>(P2P mail)</span>                       -->
                         </p>
 
-                        <p><img style="width: 27px; height: 27px;"
-                        src="images/xmpp.png" alt="icon
-                        2"><a href="images/email/email4.png"><img style="width: 130px;
-                        height: 30px" src=images/email/email4.png></a>(XMPP for IM,
-                        OTR)
-                        <br>
-                        <span style="padding-left:165px"><a href="doc/otr.txt">
-                        Fingerprint</a></span>
+                        <!-- <p><img style="width: 27px; height: 27px;" -->
+                        <!-- src="images/xmpp.png" alt="icon -->
+                        <!-- 2"><a href="images/email/email4.png"><img style="width: 130px; -->
+                        <!-- height: 30px" src=images/email/email4.png></a>(XMPP for IM, -->
+                        <!-- OTR) -->
+                        <!-- <br> -->
+                        <!-- <span style="padding-left:165px"><a href="doc/otr.txt"> -->
+                        <!-- Fingerprint</a></span> -->
                         <br>
                         <p><img style="width: 25px; height: 25px;"
                         src="images/web.png" alt="icon 3"
